// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input.Search should support custom Button 1`] = `
<span
  class="ant-input-search ant-input-search-enter-button ant-input-group-wrapper"
>
  <span
    class="ant-input-wrapper ant-input-group"
  >
    <input
      class="ant-input"
      type="text"
      value=""
    />
    <span
      class="ant-input-group-addon"
    >
      <button
        class="ant-btn ant-input-search-button"
        type="button"
      >
        <span>
          ok
        </span>
      </button>
    </span>
  </span>
</span>
`;

exports[`Input.Search should support custom button 1`] = `
<span
  class="ant-input-search ant-input-search-enter-button ant-input-group-wrapper"
>
  <span
    class="ant-input-wrapper ant-input-group"
  >
    <input
      class="ant-input"
      type="text"
      value=""
    />
    <span
      class="ant-input-group-addon"
    >
      <button
        type="button"
      >
        ok
      </button>
    </span>
  </span>
</span>
`;
